add to readme how to execute the project