@@ -1,13 +1,33 @@
-# LeagueOfPokemon
+League of Pokemon is a fun and challenging turn-based game inspired by classic RPGs. Players choose from four possible starters and battle their way through various enemies, unlocking better equipment and other starters along the way. With a built-in PVP feature, you can even battle your friends' starters on the same computer.
+
+# League of Pokemon
 
 ![](images/leagueOfPokemon.jpg)
 
-LeagueOfPokemon is a turn-based game executed by Java in which you can choose 1 out of 4 possible starters, and you will be unlocking better equipments and other starters as you battle and receive enemies' prizes.
-It also has a PVP place so you can battle versus the starters of your friend in the same computer both.
+## Prerequisites
+
+- java 14 (or higher)
 
 ## Usage
 
-Fork or download this repository in your device open the source code and press run.
+To use League of Pokemon, you'll need to first compile the source code and then execute it. Here's how:
+
+1. Clone or download the repository to your local machine.
+
+2. Open your terminal and navigate to the root directory of the project.
+
+3. Compile the source code by entering the following command:
+
+```
+javac --enable-preview -source <java version> -cp src/main/java src/main/java/view/GUI.java
+```
+Be sure to replace \<java version\> with the version of Java you have installed on your machine.
+
+4. Once the code has been compiled successfully, you can execute it by entering the following command:
+```
+java --enable-preview -cp src/main/java view.GUI
+```
+
 
 ## Contributing
 Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change.
